# jh-ai-agent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js  vitest.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: jheditor-adapter.example.js  mock-jheditor-server.js
sdk/: jhai-adapter.js
sdk/__tests__/: jhai-adapter.test.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: browser_worker.mjs
src-tauri/src/: lib.rs  main.rs  path_guard.rs
src-tauri/src/commands/: ai.rs  ai_config.rs  ai_providers.rs  fs.rs  git.rs  indexer.rs  mcp.rs  mod.rs  search.rs  shell.rs  web.rs
src-tauri/src/server/: auth.rs  config_routes.rs  mcp_ws.rs  mod.rs  router.rs  ws.rs
src/dashboard/components/: ModeDropdown.js  Sidebar.js  SlashCommands.js
src/dashboard/utils/: icons.js  markdown.js  narration.js  resultView.js
src/dashboard/utils/__tests__/: markdown.test.js  narration.test.js
src/dashboard/views/: AnalyticsView.js  ChatView.js  ChatView.styles.js  ConfigView.js  ConfigView.styles.js  HistoryView.js  MonitorView.js  MonitorView.styles.js  OverviewView.js  ScheduleView.js  monitorLogFormat.js
src/dashboard/views/chat/: chatMarkdown.js  chatRenderer.js  chatSessions.js
src/modules/ai/: AgentController.js  AgentModes.js  ContextBuilder.js  ConversationMemory.js  LLMService.js  McpClient.js  McpHttpClient.js  McpManager.js  McpWsClient.js  ProjectContext.js  PromptTemplateManager.js  ScheduleManager.js  SkillManager.js  TokenEstimator.js  ToolExecutor.js  WorkflowManager.js  strictSchema.js
src/modules/ai/__tests__/: permission.test.js  strictSchema.test.js
src/modules/ai/agent/: LoopDetector.js  (+4 more)
src/modules/bridge/: TaskBridge.js
src/modules/storage/: ApiLogStore.js
src/styles/: dashboard.css
(+36 files in other folders)
